--- a/src/assets/CSS/style.css
+++ b/src/assets/CSS/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
-@import 'animate.css';
+/* @import 'animate.css'; */
 
 
 #app {
